tree-sitter-copland/test/corpus/linear_seq.txt
==================
valid lin seq expr: kim p2 ker -> !
==================

kim p2 ker -> !

---

(source_file
  (copland
    (phrase
      (seq_expr
        seqLeft: (phrase
          (measurement
            probe: (symbol)
            place: (place
              (symbol))
            target: (symbol)))
        seqRight: (phrase
          (sig_expr))))))
